# Target-Shooter-feedback-system

./: .gitignore  README.md  comms_scheme.txt  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  test-runner.Dockerfile  test2.py  test3.py  test_socket_client.py  test_socket_server.py  test_threading.py
GUI/: figureGen.py  pdflatex.py  receiver.py  receiver.tcl  receiver_support.py  receiver_update_script.py  sender.py  sender.tcl  sender_extra_windows.py  sender_support.py  sender_update_script.py  template.tex  update_function.py
GUI/socket_stuff/: BaseSocket.py  ReceiverSocket.py  SenderSocket.py
src/common/: BaseSocket.py  figureGen.py
src/receiver/: ReceiverSocket.py  receiver.py  receiver_support.py
src/sender/: SenderSocket.py  pdflatex.py  sender_extra_windows.py  sender_support.py  sender_update_script.py  template.tex
tests/: conftest.py
tests/sender/latex_print/: diff_tools.py  test_normal.tex  test_pdflatex.py  test_simple.tex
