[metadata] 
name = package-test
version = 0.0.1
license = MIT
description = A short description
long_description = file: README.md

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    matplotlib
    pandas
    jinja2

[options.packages.find]
where=src
